[gd_scene load_steps=2 format=3 uid="uid://ggkc0ii1kpmh"]

[ext_resource type="Script" uid="uid://dx5lu4ogkdtq8" path="res://scripts/menus/stats_panel/move_list_panel/surge_changes_row.gd" id="1_yw0cc"]

[node name="SurgeChangesRow" type="MarginContainer" groups=["SurgeChangesRow"]]
custom_minimum_size = Vector2(540, 46)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -740.0
offset_bottom = -914.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0
script = ExtResource("1_yw0cc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
alignment = 1

[node name="ChangeTitle" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/bold_italics_font_size = 15
theme_override_font_sizes/italics_font_size = 15
theme_override_font_sizes/mono_font_size = 15
theme_override_font_sizes/normal_font_size = 15
theme_override_font_sizes/bold_font_size = 15
text = "Surge Change title goes here"

[node name="ChangeDetails" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 15
theme_override_font_sizes/italics_font_size = 15
theme_override_font_sizes/mono_font_size = 15
theme_override_font_sizes/normal_font_size = 15
theme_override_font_sizes/bold_font_size = 15
text = "Surge change details goes here."
